discussion/kv_engine/161479/161479_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-48094: Add KVStoreIface::initBySeqnoScanContextForLegacyStream()

Add KVStoreIface::initBySeqnoScanContextForLegacyStream() so that
DCPBackfillBySeqnoDisk::markLegacyDiskSnapshot() can request a
KVStore to create a BySeqnoScanContext struct that re-uses a
KVFileHandle. What was originally created for the current backfill.
The reason this needs to be done by a KVStore is that, the MagmaKVStore
implements a child of the BySeqnoScanContext (MagmaScanContext).

The implementation of
MagmaKVStore::initBySeqnoScanContextForLegacyStream() will be modified
in a follow up patch so that it doesn't request its own magma snapshot
and instead uses the snapshot stored inside the MagmaKVFileHandle.

Change-Id: I7170c5c7333e4a5601d79ff87881f0816750646c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Richard de Mellow
Date: 2021-09-14 12:50:45.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-09-14 13:25:13.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2013/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2013/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/13987/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/13987/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/14229/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/14229/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/14724/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/14724/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/22224/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/22224/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13127/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2030/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2030/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/39843/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc(1610): error C2065: "FindMaxCommittedItem": undeclared identifier ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/39843/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12372/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/kvstore.cc:453:30: error: use of undeclared identifier "FindMaxCommittedItem" [clang-diagnostic-error]
            std::make_unique<FindMaxCommittedItem>(maxSeqno),
                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1610:30: error: use of undeclared identifier "FindMaxCommittedItem" [clang-diagnostic-error]
            std::make_unique<FindMaxCommittedItem>(maxSeqno),
                             ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12372/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/kvstore.cc:453:30:
error: use of undeclared identifier "FindMaxCommittedItem" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12372/ )
----------------------------------------------------------------------------------------------------------------------
